Change in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <center>
-        <h1><u>WELCOME TO THE WORLD OF FOOTBALL⚽</u></h1>
+        <h1><u>WELCOME TO THE WORLD OF FOOTBALL</u></h1>
     </center>
 
     <marquee scrollamount="10" direction="right">FOOTBALL IS THE GAME OF ENERGY AND SKILLS</marquee>
