contact fill added

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="navbar">
         <a href="index.html" target="_blank"><u>HOME</u></a>
         <a href="bhavya.html" target="_blank"><u>ABOUT US</u></a>
-        <a href="football3.html" target="_blank"><u>CONTACT US</u></a>
+        <a href="contact.html" target="_blank"><u>CONTACT US</u></a>
     </div>
 
     <center>
