--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     style="background-image: url(https://wallpapers.com/images/file/image-background-i6gx0lrv6r0sep9t.jpg); background-repeat: no-repeat; background-size: cover;">
 
     <div class="navbar">
-        <a href="index.html" target="_blank"><u>HOME</u></a>
+        <a href="#" target="_blank"><u>HOME</u></a>
         <a href="bhavya.html" target="_blank"><u>ABOUT US</u></a>
         <a href="contact.html" target="_blank"><u>CONTACT US</u></a>
     </div>
